--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "photon-generator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
@@ -29,9 +29,9 @@
     "typescript": "~4.7.0"
   },
   "dependencies": {
+    "chalk": "^4",
     "commander": "^10.0.0",
     "figlet": "^1.5.2",
-    "showdown": "^2.1.0",
-    "chalk": "^4"
+    "showdown": "^2.1.0"
   }
 }
