--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "gts lint",
     "clean": "gts clean",
-    "compile": "tsc && rm -rf build/src/css && cp -r src/css build/src/css",
+    "compile": "tsc && sass src/css && rm -rf build/src/css && cp -r src/css build/src/css",
+    "compiledev": "tsc && sass src/css && rm -rf build/src/css && cp -r src/css build/src/css && cd ../darkphotonbeam.github.io && ../blog-generator/build/src/index.js && cd ../blog-generator",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
@@ -24,14 +25,16 @@
   "bin": "build/src/index.js",
   "devDependencies": {
     "@types/figlet": "^1.5.5",
+    "@types/marked": "^4.0.8",
     "@types/node": "^14.11.2",
     "gts": "^3.1.1",
+    "sass": "^1.58.0",
     "typescript": "~4.7.0"
   },
   "dependencies": {
     "chalk": "^4",
     "commander": "^10.0.0",
     "figlet": "^1.5.2",
-    "showdown": "^2.1.0"
+    "marked": "^4.2.12"
   }
 }
