--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "bin": "build/src/index.js",
   "devDependencies": {
+    "@types/express": "^4.17.16",
     "@types/figlet": "^1.5.5",
     "@types/marked": "^4.0.8",
     "@types/node": "^14.11.2",
@@ -34,6 +35,7 @@
   "dependencies": {
     "chalk": "^4",
     "commander": "^10.0.0",
+    "express": "^4.18.2",
     "figlet": "^1.5.2",
     "marked": "^4.2.12"
   }
